k8s/digital-twin-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-twin-nodeport
  namespace: expense-system

spec:
  type: NodePort

  selector:
    app: digital-twin

  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 32001
