k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  namespace: expense-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: expense.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-service
            port:
              number: 5000

  - host: digital.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digital-service
            port:
              number: 5001
